[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "SecureBytes"
author = "Erik Aronesty"
author-email = "erik@q32.com"
home-page = "https://github.com/vidaid/pysecbytes"
description-file="README.md"
classifiers=["Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
